--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,14 @@ lint/tmp/
 # Android Profiling
 *.hprof
 
+
+*.iml
+.gradle
+/local.properties
+/.idea
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
