--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.8'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.necer.ncalendar:ncalendar:5.0.2'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
 
