--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activiry.CookCollectActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activiry.SettingActivity"
             android:exported="false">
             <meta-data
@@ -22,11 +29,11 @@
         </activity>
         <activity
             android:name=".activiry.CookDetailActivity"
-            android:exported="false"></activity>
-        <activity
-            android:launchMode="singleTop"
-            android:name=".activiry.HomeActivity"
             android:exported="false" />
+        <activity
+            android:name=".activiry.HomeActivity"
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name=".activiry.LoginActivity"
             android:exported="false" />
