--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
+buildscript ({
     repositories {
-        google()
+        maven {
+            url 'https://maven.aliyun.com/repository/public/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/gradle-plugin/'
+        }
         mavenCentral()
+        google()
         maven { url 'https://jitpack.io' }
     }
     dependencies {
@@ -11,7 +20,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-}
+})
 
 task clean(type: Delete) {
     delete rootProject.buildDir
