--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,15 @@
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/repository/public/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/gradle-plugin/'
+        }
         mavenCentral()
         google()
         jcenter() // Warning: this repository is going to shut down soon
